# hyprcorners

./: Cargo.toml  LICENSE  README.md  hyprcorners.example.toml
.claude/: settings.local.json
src/: app.rs  config.rs  main.rs
