[package]
name = "hyprcorners"
version = "0.1.0"
edition = "2021"
licence = "LICENSE"
repository = "https://github.com/ArnoDarkrose/hyprcorners"
readme = "README.md"
description = "hot corners for hyprland"

[dependencies]
expanduser = "1.2.2"
hyprland = "0.4.0-beta.2"
serde = { version = "1.0.217", features = ["derive"] }
tokio = { version = "1.43.0", features = ["full"] }
toml = "0.8.20"
